objects/LLC_BI__Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is manually populated. It identifies the role that has been assigned to a user when adding them to the loan team.</description>
        <label>Role</label>
        <referenceTo>LLC_BI__Role__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Team_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is deprecated.  Team_Role has been replaced with Role.</inlineHelpText>
        <label>-D Role</label>
        <referenceTo>LLC_BI__Team_Role__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually populated. It identifies the team to which a team member can be linked.</description>
        <label>Team</label>
        <referenceTo>LLC_BI__Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is manually populated. It identifies the user being associated with a loan team.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM{0}</displayFormat>
        <label>Team Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>